The very first (partially) working demo

--- a/src/templates/grid.tpl.html
+++ b/src/templates/grid.tpl.html
@@ -11,3 +11,8 @@
         </div>
     </li>
 </ul>
+
+<button ng-click="showPrevRow();">Show prev row</button>
+<button ng-click="showNextRow();">Show next row</button>
+<button ng-click="showPrevColumn();">Show prev column</button>
+<button ng-click="showNextColumn();">Show next column</button>
